[package]
name = "bix"
version = "0.1.3"
edition = "2024"
description = "Simple xxd-like program in Rust"
license-file = "LICENSE.TXT"
repository = "https://github.com/JerryImMouse/bix"
readme = "README.md"
authors = ["JerryImMouse"]

[dependencies]
clap = { version="4.5", features=["derive"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
